--- a/CSS/HTML5-style-2.css
+++ b/CSS/HTML5-style-2.css
@@ -28,15 +28,15 @@ h2 { font-size:x-large; color:white; margin:0 0 10px 0;
 }
 h3 { font-size:large; color:white; margin:0 0 6px 0; padding: 2%;
 }
-#html5style2leftcol { float:left; width: 310px; vertical-align:top;
+div#html5style2leftcol { float:left; width: 310px; vertical-align:top;
 }
-#html5style2rightcol { width: 135px; float:right; height: 252px; margin-right:10px;
+div#html5style2rightcol { width: 135px; float:right; height: 252px; margin-right:10px;
 }
 #html5style2midcol { margin-left:315px; margin-right:145px; margin-top:10px; 
 vertical-align:top;
 }
 /*set nav block position and width and remove the #menu item*/
-nav ul { margin:10px 0 10px 0; width:135px; float:right;
+nav#html5style2nav ul { margin:10px 0 10px 0; width:135px; float:right;
 }
 /*Set un-ordered list style within the menu block only. This removes bullets*/
 nav#html5style2nav li { list-style-type:none;
@@ -61,7 +61,7 @@ li.btn a:active { background:maroon; border: 5px inset maroon;
 }
 br.clear { clear:both;
 }
-#midcol img { margin-left:10px;
+div#html5stylemidcol img { margin-left:10px;
 }
 /*change #footer to footer */
 footer { clear:both; color:maroon; text-align:center;
@@ -549,6 +549,7 @@ li {
 }
 
 */
+
 
 
 
