--- a/style.css
+++ b/style.css
@@ -63,13 +63,44 @@ p {
 
     color: #000;
     margin:auto; 
-    text-align:center;
+    text-align:center; padding: .3em .8em;
+  border: 1px solid rgba(0,0,0,.1);
+  background: #58a linear-gradient(hsla(0,0%,100%,.2),transparent);
+  border-radius: .2em;
+  box-shadow: 0 .05em .25em rgba(0,0,0,.5);
+  color: white;
+  text-shadow: 0 -.05em .05em rgba(0,0,0,.5);
+  font-size: 125%;
+  line-height: 1.5;
+  border-width: 10px;
+  border-left-width: 0px;
 }
 
 h1#html5-ch1-7h1 { font-size:300%; color :white; position: relative; left:15%; top: 55px; width:480px;
+				   padding: .3em .8em;
+  border: 1px solid rgba(0,0,0,.1);
+  background: #58a linear-gradient(hsla(0,0%,100%,.2),transparent);
+  border-radius: .2em;
+  box-shadow: 0 .05em .25em rgba(0,0,0,.5);
+  color: white;
+  text-shadow: 0 -.05em .05em rgba(0,0,0,.5);
+  font-size: 125%;
+  line-height: 1.5;
+  border-width: 10px;
+  border-left-width: 0px;
 }
 
-div#wrapper {position:relative; top:0px; left:0;width:970px; margin:auto; text-align:center;
+div#wrapper {position:relative; top:0px; left:0;width:970px; margin:auto; text-align:center; padding: .3em .8em;
+  border: 1px solid rgba(0,0,0,.1);
+  background: #58a linear-gradient(hsla(0,0%,100%,.2),transparent);
+  border-radius: .2em;
+  box-shadow: 0 .05em .25em rgba(0,0,0,.5);
+  color: white;
+  text-shadow: 0 -.05em .05em rgba(0,0,0,.5);
+  font-size: 125%;
+  line-height: 1.5;
+  border-width: 10px;
+  border-left-width: 0px;
 }
 
 /*add display attributes for the semantic tags*/
@@ -89,6 +120,19 @@ header#html5-ch1-7header.data {
   border: 10px white solid;
   background: url(bda-20.jpg);
   margin: 50px auto;
+	 padding: .3em .8em;
+  border: 1px solid rgba(0,0,0,.1);
+  background: #58a linear-gradient(hsla(0,0%,100%,.2),transparent);
+  border-radius: .2em;
+  box-shadow: 0 .05em .25em rgba(0,0,0,.5);
+  color: white;
+  text-shadow: 0 -.05em .05em rgba(0,0,0,.5);
+  font-size: 125%;
+  line-height: 1.5;
+  border-width: 10px;
+  border-left-width: 0px;
+
+
 }
 
 h1#html5-ch1-7h1 {
@@ -97,7 +141,17 @@ h1#html5-ch1-7h1 {
   position: relative;
   left: 90px;
   top: -3px;
-  width: 480px;
+  width: 480px; padding: .3em .8em;
+  border: 1px solid rgba(0,0,0,.1);
+  background: #58a linear-gradient(hsla(0,0%,100%,.2),transparent);
+  border-radius: .2em;
+  box-shadow: 0 .05em .25em rgba(0,0,0,.5);
+  color: white;
+  text-shadow: 0 -.05em .05em rgba(0,0,0,.5);
+  font-size: 125%;
+  line-height: 1.5;
+  border-width: 10px;
+  border-left-width: 0px;
 }
 
 #html5-ch1-7rosette {
@@ -107,25 +161,66 @@ h1#html5-ch1-7h1 {
 }
 
 div#html5-ch1-7content.data { background-color:transparent; border-left:10px white solid; border-right:10px white solid; 
-border-bottom:10px white solid; width: 970px; margin-top:-26px; margin-left:auto; margin-right:auto; padding:8px; font-size:medium; color:maroon; 
+border-bottom:10px white solid; width: 970px; margin-top:-26px; margin-left:auto; margin-right:auto; padding:8px; font-size:medium; color:maroon; padding: .3em .8em;
+  border: 1px solid rgba(0,0,0,.1);
+  background: #58a linear-gradient(hsla(0,0%,100%,.2),transparent);
+  border-radius: .2em;
+  box-shadow: 0 .05em .25em rgba(0,0,0,.5);
+  color: white;
+  text-shadow: 0 -.05em .05em rgba(0,0,0,.5);
+  font-size: 125%;
+  line-height: 1.5;
+  border-width: 10px;
+  border-left-width: 0px; 
 }
 
 h2#html5-ch1-7h2 {
   font-size: x-large;
   color: white;
   margin: 0 0 10px 0;
+	 padding: .3em .8em;
+  border: 1px solid rgba(0,0,0,.1);
+  background: #58a linear-gradient(hsla(0,0%,100%,.2),transparent);
+  border-radius: .2em;
+  box-shadow: 0 .05em .25em rgba(0,0,0,.5);
+  color: white;
+  text-shadow: 0 -.05em .05em rgba(0,0,0,.5);
+  font-size: 125%;
+  line-height: 1.5;
+  border-width: 10px;
+  border-left-width: 0px;
 }
 
 h3#html5-ch1-7h3 {
   font-size: large;
   color: white;
-  margin: 10px 0 6px 0;
+  margin: 10px 0 6px 0; padding: .3em .8em;
+  border: 1px solid rgba(0,0,0,.1);
+  background: #58a linear-gradient(hsla(0,0%,100%,.2),transparent);
+  border-radius: .2em;
+  box-shadow: 0 .05em .25em rgba(0,0,0,.5);
+  color: white;
+  text-shadow: 0 -.05em .05em rgba(0,0,0,.5);
+  font-size: 125%;
+  line-height: 1.5;
+  border-width: 10px;
+  border-left-width: 0px;
 }
 
 div#html5-ch1-7col.data {
   float: left;
   width: 310px;
-  vertical-align: top;
+  vertical-align: top;  padding: .3em .8em;
+  border: 1px solid rgba(0,0,0,.1);
+  background: #58a linear-gradient(hsla(0,0%,100%,.2),transparent);
+  border-radius: .2em;
+  box-shadow: 0 .05em .25em rgba(0,0,0,.5);
+  color: white;
+  text-shadow: 0 -.05em .05em rgba(0,0,0,.5);
+  font-size: 125%;
+  line-height: 1.5;
+  border-width: 10px;
+  border-left-width: 0px;
 }
 
 /*#html5-ch1-7rightcol { width: 135px; float:right; height: 252px; margin-right:10px;
@@ -134,21 +229,51 @@ div#html5-ch1-7midcol.data {
   margin-left: 315px;
   margin-right: 145px;
   margin-top: -284px;
-  vertical-align: top;
+  vertical-align: top;  padding: .3em .8em;
+  border: 1px solid rgba(0,0,0,.1);
+  background: #58a linear-gradient(hsla(0,0%,100%,.2),transparent);
+  border-radius: .2em;
+  box-shadow: 0 .05em .25em rgba(0,0,0,.5);
+  color: white;
+  text-shadow: 0 -.05em .05em rgba(0,0,0,.5);
+  font-size: 125%;
+  line-height: 1.5;
+  border-width: 10px;
+  border-left-width: 0px;
 }
 
 /*set nav block position and width*/
 /*nav { margin:10px 30px 0 10px; width:135px; float:right; 
 }*/
 nav#html5-ch1-7nav.data ul {
-  margin: -3px 0 10px 0;
+  margin: -3px 0 10px 0;  padding: .3em .8em;
+  border: 1px solid rgba(0,0,0,.1);
+  background: #58a linear-gradient(hsla(0,0%,100%,.2),transparent);
+  border-radius: .2em;
+  box-shadow: 0 .05em .25em rgba(0,0,0,.5);
+  color: white;
+  text-shadow: 0 -.05em .05em rgba(0,0,0,.5);
+  font-size: 125%;
+  line-height: 1.5;
+  border-width: 10px;
+  border-left-width: 0px;
   width: 135px;
   float: right;
 }
 
 /*Set un-ordered list style within the menu block only. This removes bullets*/
 nav#html5-ch1-7nav.data li {
-  list-style-type: none;
+  list-style-type: none; padding: .3em .8em;
+  border: 1px solid rgba(0,0,0,.1);
+  background: #58a linear-gradient(hsla(0,0%,100%,.2),transparent);
+  border-radius: .2em;
+  box-shadow: 0 .05em .25em rgba(0,0,0,.5);
+  color: white;
+  text-shadow: 0 -.05em .05em rgba(0,0,0,.5);
+  font-size: 125%;
+  line-height: 1.5;
+  border-width: 10px;
+  border-left-width: 0px;
 }
 
 /* set general side button styles */
@@ -165,6 +290,17 @@ li.btn a {
   font-weight: bold;
   text-decoration: none;
   zoom: 1;
+	 padding: .3em .8em;
+  border: 1px solid rgba(0,0,0,.1);
+  background: #58a linear-gradient(hsla(0,0%,100%,.2),transparent);
+  border-radius: .2em;
+  box-shadow: 0 .05em .25em rgba(0,0,0,.5);
+  color: white;
+  text-shadow: 0 -.05em .05em rgba(0,0,0,.5);
+  font-size: 125%;
+  line-height: 1.5;
+  border-width: 10px;
+  border-left-width: 0px;
 }
 
 /* specify mouse state styles */
