--- a/css-jq/base.css
+++ b/css-jq/base.css
@@ -116,7 +116,7 @@ br.clear { clear:both;
 footer#html5-style-2footer { clear:both; color:maroon; text-align:center;
 }
 
-/*equalise for various browsers and change #header to header*/
+/*equalise for various browsers and change #header to header*
 div body header #content {
   margin: 0;
   padding: 0;
@@ -166,7 +166,7 @@ nav#html5-style-2nav.data {
     float: right;
 }
 
-/* set general side button styles */
+/* set general side button styles *
 li.btn {
   margin-bottom: 3px;
   text-align: center;
@@ -254,7 +254,7 @@ footer {
 
 
 
-/*add display attributes for the semantic tags*/
+/*add display attributes for the semantic tags*
 header,
 footer,
 section,
@@ -305,7 +305,7 @@ h3 {
 }
 
 /*#rightcol { width: 135px; float:right; height: 252px; margin-right:10px;
-}*/
+}*
 #midcol {
   margin-left: 315px;
   margin-right: 145px;
@@ -315,19 +315,19 @@ h3 {
 
 /*set nav block position and width*/
 /*nav { margin:10px 30px 0 10px; width:135px; float:right; 
-}*/
+}*
 nav ul {
   margin: -3px 0 10px 0;
   width: 135px;
   float: right;
 }
 
-/*Set un-ordered list style within the menu block only. This removes bullets*/
+/*Set un-ordered list style within the menu block only. This removes bullets*
 nav li {
   list-style-type: none;
 }
 
-/* set general side button styles */
+/* set general side button styles *
 li.btn {
   margin-bottom: 3px;
   text-align: center;
@@ -352,14 +352,14 @@ li.btn a {
   padding-bottom: 3px;
 }
 
-/* mouseover */
+/* mouseover *
 li.btn a:hover {
   background: red;
   color: white;
   border: 5px outset red;
 }
 
-/*mouse active*/
+/*mouse active*
 li.btn a:active {
   background: maroon;
   border: 5px inset maroon;
@@ -570,6 +570,7 @@ position: absolute; top: 10px; left: 155px; margin-left:0; visibility: hidden;
 } 
 
 #gallerypagecol-3 a:hover img.hid { visibility:visible;
+
 
 
 
